adding more support for future langs (unfinished, but i need to sleep)

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                     <img src="img/carousel/JS_certificate@3x.png" alt="JavaScript certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript intermediate level certificate">
+                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript intermediate certificate">
                                 </li>
                             </ol>
                         </noscript>
