--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -5,6 +5,9 @@
     <!-- CHARSET FOR UTF-8 ENCODING -->
     <meta charset="utf-8">
 
+    <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
+    <base href="/cv/">
+
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
