--- a/index.html
+++ b/index.html
@@ -227,21 +227,21 @@
                     </li>
                     <!-- LANG MENU -->
                     <li>
-                        <button data-i18n-attr="aria-label:langBtnCa.aria-label" data-lang="ca" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
+                        <button data-i18n-attr="aria-label:langBtnCa.aria-label" data-lang="ca-ES" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#ca-flag"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
-                        <button data-i18n-attr="aria-label:langBtnEs.aria-label" data-lang="es" class="icons-scale" aria-label="Spanish" type="button">
+                        <button data-i18n-attr="aria-label:langBtnEs.aria-label" data-lang="es-ES" class="icons-scale" aria-label="Spanish" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#es-flag"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
-                        <button data-i18n-attr="aria-label:langBtnEn.aria-label" data-lang="en" class="icons-scale" aria-label="English" type="button">
+                        <button data-i18n-attr="aria-label:langBtnEn.aria-label" data-lang="en-GB" class="icons-scale" aria-label="English" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#gb-flag"></use>
                             </svg>
