try new i18n logic again

--- a/index.html
+++ b/index.html
@@ -206,14 +206,14 @@
                         <li>
                             <a aria-label="Spanish" href="fallbacks/light/index.es.html">
                                 <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#es-flag"></use>
+                                    <use href="img/sprite.svg#es-ES"></use>
                                 </svg>
                             </a>
                         </li>
                         <li>
                             <a aria-label="Catalan" href="fallbacks/light/index.ca.html">
                                 <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                    <use href="img/sprite.svg#ca-flag"></use>
+                                    <use href="img/sprite.svg#ca-ES"></use>
                                 </svg>
                             </a>
                         </li>
@@ -229,21 +229,21 @@
                     <li>
                         <button data-i18n-attr="aria-label:langBtnCa.aria-label" data-lang="ca-ES" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#ca-flag"></use>
+                                <use href="img/sprite.svg#ca-ES"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label:langBtnEs.aria-label" data-lang="es-ES" class="icons-scale" aria-label="Spanish" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#es-flag"></use>
+                                <use href="img/sprite.svg#es-ES"></use>
                             </svg>
                         </button>
                     </li>
                     <li>
                         <button data-i18n-attr="aria-label:langBtnEn.aria-label" data-lang="en-GB" class="icons-scale" aria-label="English" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#gb-flag"></use>
+                                <use href="img/sprite.svg#en-GB"></use>
                             </svg>
                         </button>
                     </li>
