--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
                                 <li id="burger-btn-wrapper">
-                                    <button id="burger-btn" data-i18n-attr="aria-label:burgerBtn.aria-label" aria-label="Open menu" aria-expanded="false" type="button">
+                                    <button id="burger-btn" data-i18n-attr="aria-label:burgerBtn.aria-label" aria-label="Open menu" aria-expanded="false" aria-pressed="false" type="button">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
