--- a/fallbacks/light/index.es.html
+++ b/fallbacks/light/index.es.html
@@ -479,8 +479,8 @@
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
                             <ul id="burger-links">
-                                <li id="burger-btn">
-                                    <button data-i18n-attr="aria-label:burgerBtn.aria-label" aria-label="Abrir menú" aria-expanded="false" type="button">
+                                <li id="burger-btn-wrapper">
+                                    <button id="burger-btn" data-i18n-attr="aria-label:burgerBtn.aria-label" aria-label="Abrir menú" aria-expanded="false" type="button">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
