--- a/fallbacks/light/index.es.html
+++ b/fallbacks/light/index.es.html
@@ -478,9 +478,9 @@
                             </aside>
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
-                            <ul id="burger-links">
+                            <ul id="burger-links" data-i18n-attr="aria-label:burger.aria-label" aria-label="Menú de repositorios">
                                 <li id="burger-btn-wrapper">
-                                    <button id="burger-btn" data-i18n-attr="aria-label:burgerBtn.aria-label" aria-label="Abrir menú" aria-expanded="false" type="button">
+                                    <button id="burger-btn" aria-label="Abrir menú" aria-expanded="false" type="button">
                                         <span id="burger-icon" class="icons-scale">
                                             <span id="burger-icon-top"></span>
                                             <span id="burger-icon-middle"></span>
