--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </li>
                     <!-- LANG MENU -->
                     <li>
-                        <button data-i18n-attr="aria-label:langBtnCa" data-lang="ca-ES" class="icons-scale" id="lang-toggle" aria-label="Catalan" type="button">
+                        <button data-i18n-attr="aria-label:langBtnCa" data-lang="ca-ES" class="icons-scale" aria-label="Catalan" type="button">
                             <svg class="icons-scale" role="img" aria-hidden="true" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#ca-ES"></use>
                             </svg>
