--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                         <picture>
                             <source type="image/webp" srcset="img/photos/gonzalo@1x.webp 1x, img/photos/gonzalo@2x.webp 2x, img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="img/photos/gonzalo@1x.png 1x, img/photos/gonzalo@2x.png 2x, img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" alt="Portrait of Gonzalo Cabezas" decoding="async" loading="lazy"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" alt="Portrait of Gonzalo Cabezas" fetchpriority="high"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
