--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -258,7 +258,7 @@
                         <picture>
                             <source type="image/webp" srcset="../../img/photos/gonzalo@1x.webp 1x, ../../img/photos/gonzalo@2x.webp 2x, ../../img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="../../img/photos/gonzalo@1x.png 1x, ../../img/photos/gonzalo@2x.png 2x, ../../img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt:gonzalo" src="../../img/photos/gonzalo@3x.png" alt="Retrat d'en Gonzalo Cabezas" fetchpriority="high"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt:gonzalo" src="../../img/photos/gonzalo@3x.png" fetchpriority="high" loading="eager" alt="Retrat d'en Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
@@ -518,7 +518,7 @@
                         </p>
                         <!--//SIGNATURE END -->
                         <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" alt="Pàgina de fans d'Estopa. Inacabat">
+                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" alt="Pàgina de fans d'Estopa. Inacabat">
                         </a>
                     </div>
                 </section>
