--- a/fallbacks/dark/index.es.html
+++ b/fallbacks/dark/index.es.html
@@ -54,10 +54,10 @@
     <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
-    <link rel="icon" href="../../img/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="../..//img/favicon.svg" type="image/svg+xml">
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="../..//css/styles.css">
 
     <!-- THEME COLOR FOR MOBILE BROWSERS -->
     <meta name="theme-color" content="#121212">
@@ -81,7 +81,7 @@
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
-    <link type="text/plain" rel="author" href="../../humans.txt">
+    <link type="text/plain" rel="author" href="../..//humans.txt">
 
     <!-- GEOLOCATION FOR LOCAL SEO -->
     <meta name="distribution" content="national">
@@ -258,7 +258,7 @@
                         <picture>
                             <source type="image/webp" srcset="../../img/photos/gonzalo@1x.webp 1x, ../../img/photos/gonzalo@2x.webp 2x, ../../img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="../../img/photos/gonzalo@1x.png 1x, ../../img/photos/gonzalo@2x.png 2x, ../../img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt:gonzalo" src="../../img/photos/gonzalo@3x.png" fetchpriority="high" loading="eager" alt="Retrato de Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt:gonzalo" src="../../img/photos/gonzalo@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Retrato de Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
@@ -361,22 +361,22 @@
                         <noscript> <!-- FALLBACK -->
                             <ol id="carousel-fallback" class="carousel-track">
                                 <li>
-                                    <img src="../../img/carousel/FRONT-END_certificate@3x.png" alt="Certificado de Front-End">
+                                    <img src="../../img/carousel/FRONT-END_certificate@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Certificado de Front-End">
                                 </li>
                                 <li>
-                                    <img src="../../img/carousel/WEB-DEV_certificate@3x.png" alt="Certificado de desarrollo Web">
+                                    <img src="../../img/carousel/WEB-DEV_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de desarrollo Web">
                                 </li>
                                 <li>
-                                    <img src="../../img/carousel/HTML_certificate@3x.png" alt="Certificado de HTML">
+                                    <img src="../../img/carousel/HTML_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de HTML">
                                 </li>
                                 <li>
-                                    <img src="../../img/carousel/CSS_certificate@3x.png" alt="Certificado de CSS">
+                                    <img src="../../img/carousel/CSS_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de CSS">
                                 </li>
                                 <li>
-                                    <img src="../../img/carousel/JS_certificate@3x.png" alt="Certificado de JavaScript">
+                                    <img src="../../img/carousel/JS_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de JavaScript">
                                 </li>
                                 <li>
-                                    <img src="../../img/carousel/JS-2_certificate@3x.png" alt="Certificado de JavaScript intermedio">
+                                    <img src="../../img/carousel/JS-2_certificate@3x.png" decoding="async" loading="lazy" alt="Certificado de JavaScript intermedio">
                                 </li>
                             </ol>
                         </noscript>
@@ -518,7 +518,7 @@
                         </p>
                         <!--//SIGNATURE END -->
                         <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" alt="Página de fans de Estopa. Inacabado">
+                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Página de fans de Estopa. Inacabado">
                         </a>
                     </div>
                 </section>
