--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@
     <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
-    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/img/favicon.svg" type="image/svg+xml"> <!-- MODERN BOM -->
+    <!---------------------------------------------- VOLVER AQUI --------------------------------------------------------------------->
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" sizes="any"> <!-- FALLBACK, OLD BOM-->
+    <link rel="apple-touch-icon" href="/img/favicon.png"> <!-- APPLE TOUCH -->
+    <meta name="msapplication-TileColor" content="#121212"> <!-- WINDOWS 8+ THEME COLOR -->
+    <meta name="msapplication-TileImage" content="/img/mstile-150x150.png"> <!-- WINDOWS 8+ IMG -->
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <!-- THEME COLOR FOR MOBILE BROWSERS -->
     <meta name="theme-color" content="#121212">
@@ -81,7 +86,9 @@
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
-    <link type="text/plain" rel="author" href="humans.txt">
+    <link type="text/plain" rel="author" href="/humans.txt">
+
+    <link rel="manifest" href="/manifest.json"> <!----------------------------------- VOLVER AQUI ---------------------------------------------->
 
     <!-- GEOLOCATION FOR LOCAL SEO -->
     <meta name="distribution" content="national">
@@ -181,7 +188,7 @@
     </script>
 
     <!-- MAIN JS -->
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
 </head>
 
 <body>
@@ -258,7 +265,7 @@
                         <picture>
                             <source type="image/webp" srcset="img/photos/gonzalo@1x.webp 1x, img/photos/gonzalo@2x.webp 2x, img/photos/gonzalo@3x.webp 3x"> <!-- WEBP SOURCES -->
                             <source type="image/png" srcset="img/photos/gonzalo@1x.png 1x, img/photos/gonzalo@2x.png 2x, img/photos/gonzalo@3x.png 3x"> <!-- PNG FALLBACK -->
-                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" fetchpriority="high" loading="eager" alt="Portrait of Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
+                            <img data-i18n-attr="alt:gonzalo" src="img/photos/gonzalo@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Portrait of Gonzalo Cabezas"> <!-- FALLBACK IMG (LAST RESORT) -->
                         </picture>
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
@@ -361,22 +368,22 @@
                         <noscript> <!-- FALLBACK -->
                             <ol id="carousel-fallback" class="carousel-track">
                                 <li>
-                                    <img src="img/carousel/FRONT-END_certificate@3x.png" alt="Front-End certificate">
+                                    <img src="img/carousel/FRONT-END_certificate@3x.png" fetchpriority="high" decoding="async" loading="eager" alt="Front-End certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" alt="Web development certificate">
+                                    <img src="img/carousel/WEB-DEV_certificate@3x.png" decoding="async" loading="lazy" alt="Web development certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/HTML_certificate@3x.png" alt="HTML certificate">
+                                    <img src="img/carousel/HTML_certificate@3x.png" decoding="async" loading="lazy" alt="HTML certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/CSS_certificate@3x.png" alt="CSS certificate">
+                                    <img src="img/carousel/CSS_certificate@3x.png" decoding="async" loading="lazy" alt="CSS certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS_certificate@3x.png" alt="JavaScript certificate">
+                                    <img src="img/carousel/JS_certificate@3x.png" decoding="async" loading="lazy" alt="JavaScript certificate">
                                 </li>
                                 <li>
-                                    <img src="img/carousel/JS-2_certificate@3x.png" alt="JavaScript intermediate certificate">
+                                    <img src="img/carousel/JS-2_certificate@3x.png" decoding="async" loading="lazy" alt="JavaScript intermediate certificate">
                                 </li>
                             </ol>
                         </noscript>
@@ -518,7 +525,7 @@
                         </p>
                         <!--//SIGNATURE END -->
                         <a href="https://sandokanCat.github.io/estopa/" target="_blank" data-status>
-                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" alt="Estopa Fanpage, unfinished">
+                            <img data-i18n-attr="alt:estopa" src="https://sandokancat.github.io/estopa/img/logo_estopa.png" decoding="async" loading="lazy" alt="Estopa Fanpage, unfinished">
                         </a>
                     </div>
                 </section>
