--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     <!---------------------------------------------- VOLVER AQUI --------------------------------------------------------------------->
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" sizes="any"> <!-- FALLBACK, OLD BOM-->
     <link rel="apple-touch-icon" href="/img/favicon.png"> <!-- APPLE TOUCH -->
-    <meta name="msapplication-TileColor" content="#121212"> <!-- WINDOWS 8+ THEME COLOR -->
+    <meta name="msapplication-TileColor" content="#1d2a42"> <!-- WINDOWS 8+ THEME COLOR -->
     <meta name="msapplication-TileImage" content="/img/mstile-150x150.png"> <!-- WINDOWS 8+ IMG -->
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="/css/styles.css">
 
     <!-- THEME COLOR FOR MOBILE BROWSERS -->
-    <meta name="theme-color" content="#121212">
+    <meta name="theme-color" content="#1d2a42">
 
     <!-- MOBILE SETTINGS -->
     <meta name="handheldFriendly" content="true">
