--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -60,7 +60,7 @@
     <link rel="stylesheet" href="../..//css/styles.css">
 
     <!-- THEME COLOR FOR MOBILE BROWSERS -->
-    <meta name="theme-color" content="#121212">
+    <meta name="theme-color" content="#1d2a42">
 
     <!-- MOBILE SETTINGS -->
     <meta name="handheldFriendly" content="true">
