fixed relative paths

--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
     <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
-    <link rel="icon" href="/img/favicon.svg" type="image/svg+xml"> <!-- MODERN BOM -->
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml"> <!-- MODERN BOM -->
     <!---------------------------------------------- VOLVER AQUI --------------------------------------------------------------------->
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon" sizes="any"> <!-- FALLBACK, OLD BOM-->
-    <link rel="apple-touch-icon" href="/img/favicon.png"> <!-- APPLE TOUCH -->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" sizes="any"> <!-- FALLBACK, OLD BOM-->
+    <link rel="apple-touch-icon" href="img/favicon.png"> <!-- APPLE TOUCH -->
     <meta name="msapplication-TileColor" content="#1d2a42"> <!-- WINDOWS 8+ THEME COLOR -->
-    <meta name="msapplication-TileImage" content="/img/mstile-150x150.png"> <!-- WINDOWS 8+ IMG -->
+    <meta name="msapplication-TileImage" content="img/mstile-150x150.png"> <!-- WINDOWS 8+ IMG -->
 
     <!-- MAIN CSS -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- THEME COLOR FOR MOBILE BROWSERS -->
     <meta name="theme-color" content="#1d2a42">
@@ -86,9 +86,9 @@
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
-    <link type="text/plain" rel="author" href="/humans.txt">
+    <link type="text/plain" rel="author" href="humans.txt">
 
-    <link rel="manifest" href="/manifest.json"> <!----------------------------------- VOLVER AQUI ---------------------------------------------->
+    <link rel="manifest" href="manifest.json"> <!----------------------------------- VOLVER AQUI ---------------------------------------------->
 
     <!-- GEOLOCATION FOR LOCAL SEO -->
     <meta name="distribution" content="national">
@@ -188,7 +188,7 @@
     </script>
 
     <!-- MAIN JS -->
-    <script type="module" src="/js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
 </head>
 
 <body>
