fixed relative path

--- a/fallbacks/dark/index.ca.html
+++ b/fallbacks/dark/index.ca.html
@@ -54,7 +54,7 @@
     <meta property="og:profile:picture" content="https://sandokan.cat/img/photos/gonzalo@3x.png">
 
     <!-- FAVICON -->
-    <link rel="icon" href="../..img/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="css/styles.css">
