--- a/fallbacks/dark/index.en.html
+++ b/fallbacks/dark/index.en.html
@@ -525,7 +525,7 @@
             </div>
         </main>
         <!-- COOKIES BLOCK -->
-        <footer id="cookies-bar" style="display: block;">
+        <footer id="cookies-bar">
             <p data-i18n="cookies">
                 🍪🐱 <strong>sandokan.cat</strong> respect your privacy. <em>We do not track</em>, only measure anonymous visits — (if you agree).
                 <button id="accept-cookies" class="icons-scale" aria-label="Continue browsing" type="button">Continue</button> | <a id="info-cookies" href="https://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" rel="noopener noreferrer" aria-label="More information about cookies">What is a <span lang="en-GB">cookie</span>?</a>
