--- a/fallbacks/light/index.ca.html
+++ b/fallbacks/light/index.ca.html
@@ -525,7 +525,7 @@
             </div>
         </main>
         <!-- COOKIES BLOCK -->
-        <footer id="cookies-bar" style="display: block;">
+        <footer id="cookies-bar">
             <p data-i18n="cookies">
                 🍪🐱 <strong>sandokan.cat</strong> respecta la teva privacitat. <em>No rastregem</em>, només mesurem visites anònimes — (si acceptes).
                 <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegant">Continuar</button> | <a id="info-cookies" href="https://ca.wikipedia.org/wiki/Galeta_(inform%C3%A0tica)" target="_blank" rel="noopener noreferrer" aria-label="Més informació sobre cookies">Què és una <span lang="en-GB">cookie</span>?</a>
