Actualizar index.en.html

--- a/fallbacks/dark/index.en.html
+++ b/fallbacks/dark/index.en.html
@@ -263,7 +263,7 @@
                         <figcaption>
                             <h1 lang="es-ES">Gonzalo Cabezas Núñez</h1>
                             <h2 data-i18n="profile"><span lang="en-GB">Frontend</span> developer transitioning to <span lang="en-GB">Fullstack</span></h2>
-                            <p data-i18n="biography">I’m obsessed with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why <span lang="en-GB">Red Teaming</span> strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
+                            <p data-i18n="biography">I’m passionate with clean, functional code. I train every day—both through formal courses and self-learning—because learning doesn’t stop when the bell rings. I like breaking things to understand (and fix) them better, which is why <span lang="en-GB">Red Teaming</span> strongly appeals to me. I don’t follow the standard path; I prefer carving my own with a keyboard and coffee. I look for projects where I can learn, contribute, and leave a mark—without pretension or empty promises. If I don’t know something, I dig into it. And if something motivates me, I won’t stop until I get it right.</p>
                         </figcaption>
                     </figure>
                 </section>
