--- a/private/fallbacks/dark/index.en-GB.html
+++ b/private/fallbacks/dark/index.en-GB.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <!-- BASE PATH FOR RELATIVE URL RESOLUTION -->
-    <base href="/cv/">
+    <base href="/00_CV">
 
     <!-- RESPONSIVE VIEWPORT SETTINGS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -348,7 +348,7 @@
                                 <abbr lang="en-GB" title="Hypertext Markup Language">HTML5</abbr> and <abbr lang="en-GB" title="Cascading Style Sheets">CSS3</abbr>
                             </li>
                             <li>
-                                <a data-i18n-attr="aria-label:JSandWP" data-i18n="JSandWP" class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf" aria-label="See certificate"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> and web publication</a>
+                                <a data-i18n-attr="aria-label:JSandWP" data-i18n="JSandWP" class="modal-link" href="doc/IFCD0110-JSiPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSiPW_gonzalo.pdf" aria-label="See certificate"><span lang="en-GB">Vanilla <abbr title="JavaScript">JS</abbr></span> and web publication</a>
                             </li>
                             <li>
                                 <a data-i18n-attr="aria-label:AddTraining" data-i18n="AddTraining" class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf" aria-label="See certificate">Additional training</a>
