--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             <aside id="menu-fallback">
                                 <ul aria-label="Repository menu">
                                     <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
+                                        <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                             <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
@@ -496,7 +496,7 @@
                                     </button>
                                 </li>
                                 <li id="github-icon">
-                                    <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Github">
+                                    <a href="https://github.com/sandokanCat" target="_blank" rel="noopener noreferrer" aria-label="Github">
                                         <svg class="icons-color-2 icons-scale" role="img" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                             <use href="img/sprite.svg#github"></use>
                                         </svg>
