add Reject cookies

--- a/private/fallbacks/dark/index.es-ES.html
+++ b/private/fallbacks/dark/index.es-ES.html
@@ -527,8 +527,7 @@
         <!-- COOKIES BLOCK -->
         <footer id="cookies-bar">
             <p data-i18n="cookies">
-                🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una <span lang="en-GB">cookie</span>?</a>
+                🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad. <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas). <button id="accept-cookies" class="icons-scale" aria-label="Seguir navegando">Continuar</button> <button id="reject-cookies" class="icons-scale" aria-label="No me importan las cookies" type="button">Rechazar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies">¿Qué es una <span lang="en-GB">cookie</span>?</a>
             </p>
         </footer>
         <!--//COOKIES END -->
